use concurrent GC in SLStudio