@@ -28,7 +28,7 @@ mainClassName = 'com.symmetrylabs.slstudio.SLStudio'
 //mainClassName = 'com.symmetrylabs.slstudio.SLHeadless'
 
 run {
-	jvmArgs '-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=12345 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.awt.headless=true'
+	jvmArgs '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC'
 
 	// To select a layout from the command line, "gradlew run -Playout=cubes"
 	systemProperty 'com.symmetrylabs.layout', findProperty('layout')
